# stacks-data

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml  taskctl.yaml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-and-release.yml  github-actions-pipeline.yml  package-test.yml  python-build-and-release.yml  python-test.yml
stacks/: utils.py
stacks/azure/: datalake.py
stacks/azure/datalake/: adls.py  base.py  lakehouse.py
stacks/behave/: fixtures.py  shared_steps.py
stacks/cli/: datastacks_cli.py
stacks/data/: constants.py  logger.py  utils.py
stacks/data/azure/: adls.py  blob.py
stacks/data/azure/datalake/: adls.py  lakehouse.py
stacks/data/behave/: fixtures.py  shared_steps.py
stacks/data/cli/: datastacks_cli.py
stacks/data/generate/: data_workloads copy.py  data_workloads.py  template_config.py
stacks/data/generate/templates/ingest/Ingest_SourceType_SourceName_DQ/data_factory/pipelines/: ARM_IngestTemplate.json.jinja
stacks/data/generate/templates/ingest/Ingest_SourceType_SourceName_DQ/spark_jobs/: ingest_dq.py.jinja
stacks/data/generate/templates/ingest/ingest_template/tests/end_to_end/features/: environment.py.jinja
stacks/data/generate/templates/ingest/ingest_template/tests/end_to_end/features/steps/: azure_data_ingest_steps.py.jinja
stacks/data/generate/templates/ingest/ingest_template/tests/unit/: test_ingest_config.py.jinja
stacks/data/generate/templates/ingest/ingest_template_DQ/data_factory/pipelines/: arm_template.json.jinja
stacks/data/generate/templates/ingest/ingest_template_DQ/spark_jobs/: data_quality.py.jinja
stacks/data/generate/templates/ingest/ingest_template_DQ/tests/unit/: test_data_quality_config.py.jinja  test_ingest_config.py.jinja
stacks/data/generate/templates/processing/processing_template/data_factory/pipelines/: arm_template.json.jinja
stacks/data/generate/templates/processing/processing_template/spark_jobs/: process.py.jinja
stacks/data/generate/templates/processing/processing_template/tests/unit/: conftest.py.jinja
stacks/data/generate/templates/processing/processing_template_DQ/data_factory/pipelines/: arm_template.json.jinja
stacks/data/generate/templates/processing/processing_template_DQ/spark_jobs/: data_quality.py.jinja
stacks/data/generate/templates/processing/processing_template_DQ/tests/unit/: test_data_quality_config.py.jinja
stacks/data/pyspark/: etl.py  pyspark_utils.py  storage_utils.py
stacks/data/pyspark/data_quality/: config.py  main.py  utils.py
stacks/data/pytestbdd/: conftest.py  fixtures.py  shared_steps.py
stacks/generate/: data_workloads.py  template_config.py
stacks/generate/templates/ingest/ingest_template/data_factory/: adf_pipelines.tf.jinja
stacks/generate/templates/ingest/ingest_template/tests/end_to_end/features/: environment.py.jinja
stacks/generate/templates/ingest/ingest_template/tests/end_to_end/features/steps/: azure_data_ingest_steps.py.jinja
stacks/generate/templates/ingest/ingest_template/tests/unit/: test_ingest_config.py.jinja
stacks/generate/templates/ingest/ingest_template_DQ/spark_jobs/: data_quality.py.jinja
stacks/generate/templates/ingest/ingest_template_DQ/tests/unit/: test_ingest_config.py.jinja
stacks/generate/templates/processing/processing_template/: de-process-ado-pipeline.yml.jinja
stacks/generate/templates/processing/processing_template/spark_jobs/: process.py.jinja
stacks/generate/templates/processing/processing_template/tests/unit/: conftest.py.jinja
stacks/generate/templates/processing/processing_template_DQ/spark_jobs/: data_quality.py.jinja
stacks/generate/templates/processing/processing_template_DQ/tests/unit/: test_data_quality_config.py.jinja
stacks/pyspark/: etl.py  pyspark_utils.py
stacks/pyspark/data_quality/: main.py  utils.py
stacks_data/azure/datalake/: adls.py  lakehouse.py
stacks_data/behave/: fixtures.py  shared_steps.py
stacks_data/cli/: datastacks_cli.py
stacks_data/generate/: data_workloads.py  template_config.py
stacks_data/generate/templates/ingest/ingest_template/tests/end_to_end/features/: environment.py.jinja
stacks_data/generate/templates/ingest/ingest_template/tests/end_to_end/features/steps/: azure_data_ingest_steps.py.jinja
stacks_data/generate/templates/ingest/ingest_template/tests/unit/: test_ingest_config.py.jinja
stacks_data/generate/templates/ingest/ingest_template_DQ/spark_jobs/: data_quality.py.jinja
stacks_data/generate/templates/ingest/ingest_template_DQ/tests/unit/: test_ingest_config.py.jinja
stacks_data/generate/templates/processing/processing_template/spark_jobs/: process.py.jinja
stacks_data/generate/templates/processing/processing_template/tests/unit/: conftest.py.jinja
stacks_data/generate/templates/processing/processing_template_DQ/: de-process-ado-pipeline.yml.jinja
stacks_data/generate/templates/processing/processing_template_DQ/data_factory/pipelines/: arm_template.json.jinja
stacks_data/generate/templates/processing/processing_template_DQ/spark_jobs/: data_quality.py.jinja
stacks_data/generate/templates/processing/processing_template_DQ/tests/unit/: test_data_quality_config.py.jinja
stacks_data/pyspark/: etl.py  pyspark_utils.py
stacks_data/pyspark/data_quality/: main.py  utils.py
tests/data/template_config/: test_config_ingest_full.yml  test_config_ingest_invalid.yml  test_config_ingest_minimal.yml  test_config_process_full.yml  test_config_process_invalid.yml  test_config_process_minimal.yml
tests/unit/: conftest.py  test_utils.py
tests/unit/azure/: test_adls.py  test_blob.py  test_data_factory.py  test_datalake.py
tests/unit/cli/: test_cli.py
tests/unit/generate/: conftest.py  test_data_workloads.py
tests/unit/pyspark/: conftest.py  test_etl.py  test_pyspark_utils.py  test_storage_utils.py
tests/unit/pyspark/data_quality/: conftest.py  test_utils.py
